--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -3,6 +3,7 @@
 }
 
 .name {
+  margin-left: 5px;
   font-size: 20px;
   font-weight: 400;
   color: rgb(54, 54, 3);
@@ -28,7 +29,8 @@
 }
 
 .input {
-  width: 300px;
+  margin-left: 5px;
+  width: 200px;
   height: 20px;
   border-radius: 5px;
   border: 1px solid rgb(54, 54, 3);
